<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomToolBar"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/shape_main_tab_bg"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <com.example.documenpro.ui.customviews.BottomButtonView
        android:id="@+id/btnRotateTab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:Image="@drawable/ic_flip_black"
        app:Name="@string/action_rotate" />

    <com.example.documenpro.ui.customviews.BottomButtonView
        android:id="@+id/btnEditTab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:Image="@drawable/ic_edit"
        app:Name="@string/action_edit" />

    <com.example.documenpro.ui.customviews.BottomButtonView
        android:id="@+id/btnSearchTab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:Image="@drawable/ic_search_text"
        app:Name="@string/search_menu_title" />

    <com.example.documenpro.ui.customviews.BottomButtonView
        android:id="@+id/btnThumbnailTab"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:Image="@drawable/ic_pages_preview"
        app:Name="@string/menu_view_thumbnail" />
</LinearLayout>
