<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_dialog_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="24dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/bg_dialog_rounded"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_icon" />

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_merge_lock" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="start"
        android:includeFontPadding="false"
        android:text="@string/enter_password"
        android:textAlignment="viewStart"
        android:textColor="@color/colorTextPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dialog_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="start"
        android:text="@string/password_des"
        android:textAlignment="viewStart"
        android:textColor="#89909c"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shape_edit_text_bg"
        android:fontFamily="@font/roboto_medium"
        android:gravity="left|center_vertical|center_horizontal|center|start"
        android:hint="@string/password"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="40dp"
        android:textAlignment="viewStart"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="#8089909c"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_description" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_toggle_password_visibility"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_password_input"
        app:layout_constraintEnd_toEndOf="@+id/et_password_input"
        app:layout_constraintTop_toTopOf="@+id/et_password_input"
        app:srcCompat="@drawable/ic_pdf_pwd_hide" />

    <LinearLayout
        android:id="@+id/ll_error_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/et_password_input"
        app:layout_constraintStart_toStartOf="@+id/et_password_input"
        app:layout_constraintTop_toBottomOf="@+id/et_password_input">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:tint="#e02020"
            app:srcCompat="@drawable/ic_home_failure" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="start"
            android:text="@string/pwd_error"
            android:textColor="#e02020"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_negative_btn"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/action_cancel"
        android:textColor="@color/bg_cancel_text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_error_container"
        app:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_positive_btn"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/action_ok"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel"
        app:textAllCaps="true" />


    <Space
        android:id="@+id/bottom_space"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_confirm"
        app:layout_goneMarginTop="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
